Created enum property for ticket history field, refactored function that saves ticket changes and fixed bug with getting data for role management